--- a/index.html
+++ b/index.html
@@ -6,17 +6,32 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <title>Todo List</title>
 </head>
 <body>
     
-    <header>
-        <h1> Thiago's Todo List </h1>
-    </header>
+    <!-- navbar here -->
+    <nav>
+        <div class="logo">
+            <h4> Bruning's Todo List </h4>
+        </div>
+    
+        <ul class="nav-links">
+            <li><a href="#"> About </a></li>
+            <li><a href="#"> Technologies </a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+
 
     <form>
-        <input type="text" class="todo-input" autofocus>
+        <input type="text" class="todo-input" autofocus >
         <button class="todo-button" type="submit"> 
             <i class="fas fa-plus-square"></i> 
         </button>
