Adding layout support for smartphones and tablets

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <ul class="todo-list"></ul>
     </div>
 
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/navbar.js"></script>
 </body>
 </html>
