--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <title>Todo List</title>
 </head>
 <body>
@@ -48,6 +49,16 @@
     <div class="todo-container">
         <ul class="todo-list"></ul>
     </div>
+
+    <footer>
+        <div class="author">
+            <p> Developed by Thiago Bruning </p>
+        </div>
+        <div class="info">
+            <p> <i class="fas fa-envelope-square"></i> thiago.bruning@hotmail.com </p>
+            <a href="https://www.github.com/thiagobruning"><i class="fab fa-github"></i> @thiagobruning </a>
+        </div>
+    </footer>
 
     <script src="./js/app.js"></script>
     <script src="./js/navbar.js"></script>
